[css-writing-modes] Fix percentages on orthogonal replaced children

This patch modifies LayoutBox::ComputeReplacedLogicalWidth|HeightUsing()
so it's aware of the orthogonal flow cases.

For example to compute the relative widths of replaced elements,
if the element direction is perpendicular to its containing block
it should use the containing block height instead of the width.

BUG=837146
TEST=external/wpt/css/css-writing-modes/sizing-percentages-replaced-orthogonal-001.html

Change-Id: I655c984703e2073be9a3a649ac79a63f8c136cc0
Reviewed-on: https://chromium-review.googlesource.com/1029852
Reviewed-by: Javier Fernandez <jfernandez@igalia.com>
Commit-Queue: Manuel Rego Casasnovas <rego@igalia.com>
Cr-Commit-Position: refs/heads/master@{#554731}
Former-commit-id: 0dba09954ece0dd1d37224e76f3cd62ad99185fe